force-app/main/default/staticresources/python/Disappear/src/objects/ReviewTeamMember__c.object
<CustomObject>
    <fields>
        <fullName>Appear_Role__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Appear Role</label>
        <referenceTo>Appear_Role__c</referenceTo>
        <relationshipLabel>Review Team Members</relationshipLabel>
        <relationshipName>Review_Team_Members</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ReviewTeamMember__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Review Team Member</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Review Team Members</relationshipLabel>
        <relationshipName>Review_Team_Members</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Review_Team__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Review Team</label>
        <referenceTo>Review_Team__c</referenceTo>
        <relationshipLabel>Review Team Members</relationshipLabel>
        <relationshipName>Review_Team_Members</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ReviewerType__c</fullName>
        <label>Type</label>
        <picklist>
            <picklistValues>
                <fullName>Primary</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Notify</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FPA Approver</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FPA Comments Only</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FPA Copy Only</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FPA Delegate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FPA Triagee</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Reviewer_Role__c</fullName>
        <label>Reviewer Role</label>
        <picklist>
            <picklistValues>
                <fullName>Area VP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EDL/GDL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IML</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>US Legal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>International Legal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Biostatistics</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IBL International</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Global TA Head</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Biosimilars</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>SiebelRowId__c</fullName>
        <externalId>true</externalId>
        <label>SiebelRowId</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <label>Review Team Member</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>RTM-{00000000}</displayFormat>
        <label>Review Team Member Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Review Team Members</pluralLabel>
    <recordTypes>
        <fullName>APPEARReviewTeamMemberRecord</fullName>
        <active>true</active>
        <label>APPEARReviewTeamMemberRecord</label>
    </recordTypes>
    <recordTypes>
        <fullName>LegacyReviewTeamMemberRecord</fullName>
        <active>true</active>
        <description>Used for legacy data migration from Siebel</description>
        <label>LegacyReviewTeamMemberRecord</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>